--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movfinder",
+  "name": "abhradip_resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-component": "^1.0.2",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
