--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "d3-selection": "^3.0.0",
     "d3-transition": "^3.0.1",
     "postcss-cli": "^10.1.0",
@@ -25,10 +27,15 @@
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-component": "^1.0.2",
     "react-wordcloud": "^1.2.7",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
